--- a/design-system-style.css
+++ b/design-system-style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400&display=swap');
 .button {
+    display: flex;
     border-radius: 40px;
-    padding: 3px, 10px, 3px, 10px;
+    padding: 3px 10px 3px 10px;
     border-style: none;
     background-color: var(--main-color);
     color: var(--main-text-color);
@@ -23,26 +24,24 @@
     --add-tag-color: #EBEBEB;
 }
 
-.text-tag {
+.text-base{
     font-family: 'Prompt', sans-serif;
+    letter-spacing: -0.02em;
+}
+.text-tag {
     font-weight: 300;
     font-size: 10px;
     line-height: 15px;
-    letter-spacing: -0.02em;
 }
 
 .text-body {
-    font-family: 'Prompt', sans-serif;
     font-size: 13px;
     font-weight: 300;
     line-height: 20px;
-    letter-spacing: -0.02em;
 }
 
 .text-title {
-    font-family: 'Prompt', sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
-    letter-spacing: -0.02em;
 }
