--- a/design-system-style.css
+++ b/design-system-style.css
@@ -51,3 +51,12 @@
     font-weight: 400;
     line-height: 30px;
 }
+
+.loop{
+    width: 48px;
+    height: 48px;
+    border-radius: 50px;
+    align-items: center;
+    border-radius: 50%;
+
+}
