--- a/design-system-style.css
+++ b/design-system-style.css
@@ -6,6 +6,7 @@
     border-style: none;
     background-color: var(--main-color);
     color: var(--main-text-color);
+    width: fit-content;
 }
 
 .button:active {
@@ -61,30 +62,23 @@
 
 }
 
-.button_filtre {
+.txt_button {
+    font-family: 'Prompt', sans-serif;
+    letter-spacing: -0.02em;
+}
 
+.button_filtre {
     font-family: 'Prompt', sans-serif;
     letter-spacing: -0.02em;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 2px 14px;
-    gap: 10px;
-    
-    width: 59px;
     height: 27px;
-    
-    background: #DCD3FB;
     border-radius: 40px;
-    
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    stroke: none;
-    text-decoration: none;
+    padding: 3px 10px 3px 10px;
     border-style: none;
-    
-    }
+    background-color: var(--clicked-color);
+    color: var(--clicked-text-color);
+    width: fit-content;
+}
     
 .tag{
     
@@ -110,7 +104,7 @@
     padding: 3px 10px;
     gap: 10px;
         
-    width: 42px;
+    width: fit-content;    
     height: 21px;
     left: 99px;
     top: 542px;
@@ -146,7 +140,7 @@
     padding: 3px 10px;
     gap: 10px;
         
-    width: 42px;
+    width: fit-content;
     height: 21px;
     left: 99px;
     top: 542px;
@@ -192,46 +186,101 @@
     border-radius: 40px;
     border-style: none;
     
-    }
+}
 
-    body {
-        background-image: url(https://placekitten.com/200/300);
-      }
+.like input {
+    appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='16' viewBox='0 0 18 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_2)'%3E%3Cpath d='M17 5.5594C17.0027 6.75623 16.5285 7.90755 15.6768 8.77167C13.7239 10.7403 11.8295 12.7928 9.8047 14.6891C9.3399 15.1169 8.60309 15.1013 8.15908 14.6541L2.32302 8.77245C0.558995 6.99442 0.558995 4.12438 2.32302 2.34713C2.73993 1.92168 3.24138 1.58297 3.79694 1.35154C4.35251 1.12011 4.95064 1.00078 5.55505 1.00078C6.15947 1.00078 6.75759 1.12011 7.31316 1.35154C7.86873 1.58297 8.37017 1.92168 8.78709 2.34713L8.99989 2.56025L9.2119 2.34713C9.62966 1.92269 10.1312 1.5846 10.6866 1.35312C11.242 1.12164 11.8397 1.00153 12.4439 1C13.6599 1 14.8224 1.48534 15.676 2.34713C16.528 3.21113 17.0025 4.36247 17 5.5594Z' stroke='%236333FF' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_2'%3E%3Crect width='18' height='16' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+}
+  
+  
+.like input:checked {
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='16' viewBox='0 0 18 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 5.5594C17.0027 6.75623 16.5285 7.90755 15.6768 8.77167C13.7239 10.7403 11.8295 12.7928 9.8047 14.6891C9.3399 15.1169 8.60309 15.1013 8.15908 14.6541L2.32302 8.77245C0.558995 6.99442 0.558995 4.12438 2.32302 2.34713C2.73993 1.92168 3.24138 1.58297 3.79694 1.35154C4.35251 1.12011 4.95064 1.00078 5.55505 1.00078C6.15947 1.00078 6.75759 1.12011 7.31316 1.35154C7.86873 1.58297 8.37017 1.92168 8.78709 2.34713L8.99989 2.56025L9.2119 2.34713C9.62966 1.92269 10.1312 1.5846 10.6866 1.35312C11.242 1.12164 11.8397 1.00153 12.4439 1C13.6599 1 14.8224 1.48534 15.676 2.34713C16.528 3.21113 17.0025 4.36247 17 5.5594Z' fill='%236333FF' stroke='%236333FF' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.save input {
+    appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='22' viewBox='0 0 18 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 21V2C1 1.44771 1.44771 1 2 1H16C16.5523 1 17 1.44771 17 2V21L9 16.8636L1 21Z' stroke='%231B1B1B' stroke-width='2' stroke-linejoin='round'/%3E%3C/svg%3E ");    
+    background-repeat: no-repeat;
+}
+  
+  
+.save input:checked {
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='22' viewBox='0 0 18 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 21V2C1 1.44771 1.44771 1 2 1H16C16.5523 1 17 1.44771 17 2V21L9 16.8636L1 21Z' fill='%231B1B1B' stroke='%231B1B1B' stroke-width='2' stroke-linejoin='round'/%3E%3C/svg%3E ");
+}
+
+body {
+background-image: url(https://placekitten.com/200/300);
+}
       
+.navbar1 {
+    position:fixed;
+    bottom: 500px;
+    left: 800px;
+}
+.navbar2 {
+    position:fixed;
+    bottom: 100px;
+}
+
+.navbar3 {
+    position:fixed;
+    bottom: 200px;
+}
+
+.navbar4 {
+    position:fixed;
+    bottom: 300px;
+}
+
+.navbar5 {
+    position:fixed;
+    bottom: 400px;
+    right: 20px;
+}
+.navbar6 {
+    position:fixed;
+    bottom: 200px;
+    left: 500px;
+}
       
-      .navbar {
-        position:fixed;
-        bottom: 0;
-      }
+.bar {
+    height: 46px;
+    width: 288px;
+    background-image: url("data:image/svg+xml,%3Csvg width='288' height='46' viewBox='0 0 288 46' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M143.5 33C158.688 33 171 20.6878 171 5.5C171 3.61644 170.811 1.7771 170.45 0H268C279.046 0 288 8.95431 288 20V26C288 37.0457 279.046 46 268 46H20C8.9543 46 0 37.0457 0 26V20C0 8.95431 8.95431 0 20 0H116.55C116.189 1.7771 116 3.61644 116 5.5C116 20.6878 128.312 33 143.5 33Z' fill='black'/%3E%3C/svg%3E ");  background-position: 50% 50%;
+    border-radius: 1rem;
+    display: grid;
+    grid-template-columns: 1.2fr .1fr 1.7fr .1fr 1.2fr
+}
       
-      .bar {
-        height: 46px;
-        width: 288px;
-        background-image: url("data:image/svg+xml,%3Csvg width='288' height='46' viewBox='0 0 288 46' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M143.5 33C158.688 33 171 20.6878 171 5.5C171 3.61644 170.811 1.7771 170.45 0H268C279.046 0 288 8.95431 288 20V26C288 37.0457 279.046 46 268 46H20C8.9543 46 0 37.0457 0 26V20C0 8.95431 8.95431 0 20 0H116.55C116.189 1.7771 116 3.61644 116 5.5C116 20.6878 128.312 33 143.5 33Z' fill='black'/%3E%3C/svg%3E ");  background-position: 50% 50%;
-        border-radius: 1rem;
-        display: grid;
-        grid-template-columns: 1.2fr .1fr 1.7fr .1fr 1.2fr
-      }
+.icons {
+    display: inline-block;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
       
-      .icons {
-        display: inline-block;
-        color: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      
-      .circle {
-        position: absolute;
-        top: -17px;
-        left: 50%;
-        margin-left: -22px;
-        width: 44px;
-        height: 44px;
-        border-radius: 50%;
-        background: #6333FF;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+.circle {
+    position: absolute;
+    top: -17px;
+    left: 50%;
+    margin-left: -22px;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background: var(--main-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.clicked {
+    background: var(--clicked-color);
+}
     
