--- a/design-system-style.css
+++ b/design-system-style.css
@@ -116,6 +116,27 @@
     
     }
     
+.km {
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 15px;
+    letter-spacing: -0.02em;
+    color: var(--clicked-text-color);
+    padding-bottom: 5px;
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    margin-right: 15px;
+    height: 7px;
+    background: rgba(143, 143, 143, 0.6);
+    border-radius: 5px;
+    background-color: var(--clicked-color);
+    background-repeat: no-repeat;
+  }
+
 .tag2{
     
     width: 22px;
