--- a/design-system-style.css
+++ b/design-system-style.css
@@ -495,3 +495,28 @@ body {
     width: 280px;
     filter: drop-shadow(0px 4px 20px #000000);
 }
+
+.impact{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+width: 83px;
+height: 95px;
+border-radius: 10%;
+gap: 5px;
+}
+
+.economie{
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+gap: 16px;
+    
+
+}
+
+.result{
+    display: flex;
+    flex-direction: row;
+}
