--- a/design-system-style.css
+++ b/design-system-style.css
@@ -68,7 +68,6 @@
     border-radius: 50%;
 }
 
-<<<<<<< Updated upstream
 /* SECTION FILTRE */
 
 .filtret {
@@ -522,7 +521,7 @@ gap: 16px;
 .impact2{
 display: flex;
 align-items: center;
-flex-direction: row;
+flex-direction: column;
 width: 132px;
 height: 95px;
 border-radius: 10%;
@@ -535,7 +534,3 @@ gap: 6px;
     align-items: flex-start;
     gap: 16px;
 }
-=======
-}
-  
->>>>>>> Stashed changes
