--- a/style-home-green.css
+++ b/style-home-green.css
@@ -118,14 +118,14 @@
 
 .heade {
     width: 320px;
-    height: 70px;
+    height: 83px;
     position: fixed;
     top: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 13px;
-    padding: 15px 24px 0px 20px;
+    margin: 0px 19px 0px 12px;
     background-color: #fff;
 }
 
@@ -143,7 +143,7 @@
     flex-direction: row;
     align-items: center;
     gap: 10px;
-    margin-right: 130px;
+    margin-right: 147px;
 }
 
 /* valeur coins */
@@ -175,21 +175,22 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 0px 24px 0px 20px;
+    margin: 0px 19px 0px 12px;
     position: relative;
-    top: 83px;
+    top: 78px;
 }
 
 /* SECTION FILTRE */
 
 .filtregenre {
+    width: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 0px 24px 0px 20px;
+    margin: 0px 15px 0px 12px;
     position: relative;
     top: 106px;
-    gap: 4px;
+    gap: 11px;
 }
 
 .filtret {
@@ -225,7 +226,7 @@
     position: relative;
     top: 129px;
     gap: 12px;
-    margin: 0px 24px 0px 20px;
+    margin: 0px 19px 0px 12px;
 }
 
 .tag{        
@@ -249,7 +250,7 @@
     background: var(--add-tag-color);
     border-radius: 40px;
     border-style: none;
-    margin-right: 90px;
+    margin-right: 107px;
 
 }
 
@@ -280,25 +281,26 @@
 .rangekm {
     position: relative;
     top: 170px;
-    margin: 0px 24px 0px 20px;
+    margin: 0px 19px 0px 12px;
+    right: 2px;
 }
 
 .indic {
     position: relative;
-    width: 265px;
+    width: 285px;
     height: 24px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 0px 24px 0px 20px;
-    gap: 197px;
+    margin: 0px 19px 0px 12px;
+    gap: 210px;
     top: 160px;
     
 }
 
 .range-slider {
     position: relative;
-    width: 265px;
+    width: 281px;
   }
   
   .slider {
@@ -345,7 +347,7 @@
 .results {
     color: var(--tag-color);
     letter-spacing: 0.06rem;
-    margin: 0px 24px 0px 7px;
+    margin: 0px 19px 0px 12px;
     top: 190px;
     position: relative;
 }
@@ -353,7 +355,7 @@
 .gridcard {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 0px 24px 290px 12px;
+    margin: 0px 19px 290px 12px;
     gap: 13px;
     grid-row-gap: 30px;
 
