--- a/page-ouverture.css
+++ b/page-ouverture.css
@@ -1,8 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400&display=swap');
 
+/* STYLE BUTTON PRIMARY */
+
+.button {
+    display: flex;
+    border-radius: 40px;
+    padding: 3px 10px 3px 10px;
+    border-style: none;
+    background-color: var(--main-color);
+    color: var(--main-text-color);
+    width: fit-content;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.button:active {
+    background-color: var(--clicked-color);
+    color: var(--clicked-text-color);
+}
+
+/* STYLE BUTTON SECONDARY */
+
+.button2 {
+    display: flex;
+    border-radius: 40px;
+    padding: 3px 10px 3px 10px;
+    border-style: none;
+    background-color: var(--main-text-color);
+    color: var(--clicked-text-color);
+    width: fit-content;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.button2:active {
+    background-color: var(--clicked-color);
+    color: var(--clicked-text-color);
+}
+
+/* STYLE COLOR & TEXT */
+
+:root {
+    --main-color: #6333FF;
+    --clicked-color: #DCD3FB;
+    --main-text-color: #FFFFFF;
+    --clicked-text-color: #6333FF;
+    --second-text-color: #000000;
+    --coin-color: #392284;
+    --tag-color: #A4A4A4;
+    --tag2-color: #7C7C7C;
+    --add-tag-color: #EBEBEB;
+}
+
+.text-button {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 23px;
+}
+
+
 .dame{
     position: absolute;
-    border-radius: 50%;
     left: 0px;
     top: 0px;
+}
+
+.vivez{
+    position: absolute;
+    left: 24px;
+    top: 368px;
+}
+
+.decouverte{
+    position: absolute;
+    left: 87px;
+    top: 475px;
+}
+
+.recherche{
+    position: absolute;
+    left: 60px;
+    top: 514px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
 }
