--- a/style-messages.css
+++ b/style-messages.css
@@ -174,7 +174,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 70px 19px -130px 24px;
+    margin: 70px 19px -130px 13px;
     gap: 60px;
 }
 
@@ -188,7 +188,7 @@
     top: 140px;
     right: 10px;
     border: 1px var(--tag-color) solid;
-    padding: 7px 0px 7px 10px;
+    padding: 7px 5px 7px 20px;
     gap: 15px;
     display: flex;
     align-items: flex-start;
@@ -206,14 +206,16 @@
 .m1 {
     width: 148px;
     height: 85px;
-    position: relative;
-    top: 200px;
+    position: absolute;
+    top: 224px;
+    left: 20px;
 }
 .m2 {
     width: 148px;
     height: 99px;
-    position: relative;
-    top: 200px;
+    position: absolute;
+    top: 325px;
+    left: 152px;
 }
 
 /* MESSAGERIE */
@@ -246,5 +248,26 @@
     border-radius: 5px;
     border-style: none;
     
+}
+
+.legend {
+    position: absolute;
+    left: 50px;
+    top: 460px;
+}
+
+/* STYLE BUTTON point */
+
+.buttonp {
+    display: flex;
+    border-radius: 40px;
+    border-style: none;
+    padding: 3px 10px 3px 10px;
+    background-color: var(--clicked-color);
+    color: var(--main-color);
+    width: fit-content;
+    position: absolute;
+    top: 133px;
+    left: 244px;
 }
 
