--- a/page-ouverture.css
+++ b/page-ouverture.css
@@ -38,6 +38,29 @@
     color: var(--clicked-text-color);
 }
 
+/* STYLE BUTTON point */
+
+.buttonp {
+    display: flex;
+    border-radius: 40px;
+    border-style: none;
+    padding: 3px 10px 3px 10px;
+    background-color: var(--clicked-color);
+    color: var(--main-color);
+    width: fit-content;
+}
+
+/* STYLE BUTTON nombre de porteurs */
+
+.buttonv {
+    display: flex;
+    border-radius: 40px;
+    border-style: none;
+    padding: 6px 6px 6px 6px;
+    background-color: var(--clicked-color);
+    color: var(--main-color);
+}
+
 /* STYLE COLOR & TEXT */
 
 :root {
@@ -52,10 +75,45 @@
     --add-tag-color: #EBEBEB;
 }
 
+.text-base{
+    font-family: 'Prompt', sans-serif;
+    letter-spacing: -0.02em;
+}
+.text-tag {
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 15px;
+    color: var(--main-text-color);
+}
+
+.text-impact {
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 18.14px;
+}
+
+.text-body {
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
 .text-button {
     font-size: 15px;
     font-weight: 400;
     line-height: 23px;
+}
+
+.text-button2 {
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 23px;
+}
+
+.text-title {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
 }
 
 
@@ -71,18 +129,29 @@
     top: 368px;
 }
 
+.open {
+    position: relative;
+    top: 350px;
+    margin: 0px 24px 0px 24px;
+    text-align: center;
+}
+
 .decouverte{
-    position: absolute;
-    left: 87px;
-    top: 475px;
+    position: relative;
+    margin: 0px 24px 0px 78px;
+    top: 370px;
 }
 
 .recherche{
-    position: absolute;
-    left: 60px;
-    top: 514px;
+    position: relative;
+    margin: 0px 20px 0px 50px;
+    top: 370px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 3px;
+}
+
+a {
+    text-decoration: none;
 }
