--- a/style-messages.css
+++ b/style-messages.css
@@ -121,14 +121,15 @@
     height: 83px;
     position: fixed;
     top: 0px;
+    left: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 13px;
     margin: 0px 19px 0px 12px;
     background-color: #fff;
+    padding-left: 10px;
 }
-
 /* Affichage coins */
     
 .coins {
@@ -174,8 +175,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 70px 19px -130px 13px;
-    gap: 60px;
+    margin: 70px 19px -130px 7px;
+    gap: 72px;
 }
 
 .title svg {
