--- a/style-contact.css
+++ b/style-contact.css
@@ -92,186 +92,58 @@
     line-height: 30px;
 }
 
-/* HEADER WITH POINTS & ICONS */
-
-.heade {
-    width: 320px;
-    height: 83px;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 13px;
-    margin: 0px 19px 0px 12px;
-    background-color: #fff;
-    padding-left: 10px;
-}
-
-/* Affichage coins */
-    
-.coins {
-    color: var(--main-text-color);
-    background-color: var(--coin-color);
-    width: fit-content;
-    height: 27px;
-    display: flex;
-    border-radius: 5px;
-    padding: 10px 10px 10px 10px;
-    border-style: none;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    margin-right: 147px;
-}
-
-/* valeur coins */
-
-.point {
-    color: var(--coin-color);
-    background-color: var(--main-text-color);
-    border-radius: 50%;
-    display: flex;  
-    align-items: center;
-    justify-content: center;
-    height: 21px;
-    width: 21px;
-    
-}
-
-.iconb {
-    text-decoration: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
 /* TITRE DE LA PAGE */
 
 .title {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin: 67px 19px -130px 7px;
-    gap: 33px;
+    margin: 15px 19px 20px 7px;
+    gap: 16px;
 }
 
 .title svg {
     display: flex;
+    margin-right: 20px;
+    margin-top: 36px;
 }
-
-
-/* IMAGE PRODUIT */
-
-
-.image img {
-    width: 278px;
-    height: 388px;  
-    position: relative;
-    margin: 143px 21px 0px 13px;
-}
-
-/* STYLE BUTTON point */
-
-.buttonp {
-    display: flex;
-    border-radius: 10px;
-    border-style: none;
-    padding: 3px 10px 3px 10px;
-    background-color: var(--clicked-color);
-    color: var(--main-color);
-    width: fit-content;
-    position: relative;
-    bottom: 383px;
-    left: 24px;
-}
-
-/* STYLE BUTTON nombre de porteurs */
-
-.buttonv {
-    display: flex;
-    border-radius: 50%;
-    border-style: none;
-    padding: 6px 6px 6px 6px;
-    background-color: var(--clicked-color);
-    color: var(--main-color);
-    position: relative;
-    bottom: 63px;
-    left: 241px;
-}
-
-.image p {
-    margin: -60px 12px 0px 34px;
-}
-
-/* TAG VÊTEMENT */
-
-.tag{        
-    padding: 3px 10px;        
-    width: fit-content;    
-    height: 21px;      
-    background: var(--tag-color);
-    border-radius: 40px;
-    border-style: none; 
-    color: #fff;
-}
-
-.TAGbar {
-    width: 280px;
-    height: 21px;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    top: 129px;
-    gap: 12px;
-    margin: -110px 21px 0px 13px;
-}
-
-/* CONTACT + TAGS SPÉCIAUX */
 
 .contact {
-    width: 278px;    
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 5px;
-    margin: 150px 21px 0px 13px;
+    gap: 16px;
+    margin-bottom: -20px;
 }
 
-.contact p {
-    margin-right: 38px;
-}
-
-.tag2{        
-    padding: 3px 9px;        
-    width: fit-content;    
-    height: 21px;      
-    background: var(--tag2-color);
-    border-radius: 40px;
-    border-style: none; 
-    color: #fff;
-}
-
-.TAGbar2 {
-    width: fit-content;
-    height: 21px;
+.head {
     display: flex;
-    flex-direction: row;
-    gap: 8px;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+
 }
 
-.announce {
-    position: relative;
-    margin: 15px 21px 0px 13px;
+.head h2 {
+    color: var(--tag2-color);
 }
+
+
+.indic {
+    position: relative;
+    display: flex;
+    top: 120px;
+    margin: 10px 19px 150px 19px;
+
+}
+
+
 
 /* CALENDRIER */
 
 .résa {
     position: relative;
-    margin: 25px 21px 0px 13px;
+    margin: 25px 21px -120px 13px;
 }
 
 .calendar{
@@ -306,7 +178,7 @@
     width: fit-content;
     height: fit-content;
     position: absolute;
-    top: 128px;
+    top: 127.5px;
     left: 236px;
 }
 
@@ -341,26 +213,6 @@
     opacity: 1;
 }
 
-.buttonR {
-  border-radius: 40px;
-  padding: 1px 7px 1px 7px;
-  border-style: none;
-  background-color: #6333FF;
-  color: #FFFFFF;
-  width: fit-content;
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
-.buttonR:active {
-  background-color: #DCD3FB;
-  color: #6333FF;
-}
-
-#réservation {
-  position: relative; 
-}
-
 .frectangle {
   width: 78px;
   height: 20px;
@@ -384,11 +236,11 @@
 .disp {
     width: 280px;
     position: relative;
-    margin: -30px 21px 0px 13px;
+    margin: 100px 21px 0px 18px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
 }
 
 .disponibility {
@@ -406,160 +258,21 @@
     background: var(--tag2-color);
 }
 
+.state2 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--main-color);
+}
+
 .dispo {
     color: var(--second-text-color);
 }
 
-.similary {
-    position: relative;
-    margin: 30px 21px 0px 13px;
-}
-
-/* AJOUT DE TAG */
-
-.editable-button{
-    color: var(--tag-color);
-    padding: 3px 10px;
-    width: fit-content;
-    height: 21px;
-    background: var(--add-tag-color);
-    border-radius: 40px;
-    border-style: none;
-    margin-right: 55px;
-}
-
-.similarity {
-    width: 290px;
-    position: relative;
-    margin: 200px 10px 100px 7px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 240px;
-}
-
-.gridcard {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: -190px 13px 100px 13px;
-    gap: 13px;
-}
-
-/* CARD CLOTHES */
-.card {
-    width: 108px;
-    height: 170px;
-    background-color: #fff;
-    border-radius: 10px;
-    position: relative;
-}
-
-.img {
-    width: 108px;
-    height: 133px;
-}
-
-.orange7 {
-    background-image: url(img/orange7.png);
-}
-.orange8 {
-    background-image: url(img/orange8.png);
-}
-
-/* BOTTOM CARD */
-.bottom {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 108px;
-    height: 25px;
-    margin-top: 10px;
-    
-}
-
-.valueclothe {
-    width: fit-content;
-    background-color: var(--clicked-color);
-    color: var(--clicked-text-color);
-    padding: 1px 5px 0px 5px;
-    border-radius: 5px;
-    text-align: center;
-    position: absolute;
-    left: 0px;
-
-}
-
-.name {
-    color: #6B6969;
-    text-align: center;
-    margin-top: 2.5px;
-    position: absolute;
-    left: 30px;
-
-}
-
-/* LIKE ICON SYSTEM */
-
-.like {
+.message {
     display: flex;
     justify-content: center;
-    margin-right: -30px;
-    position: absolute;
-    left: 85px;
-}
+    margin: 30px 21px 0px 18px;
 
-.like input {
-    appearance: none;
-    width: 1.3rem;
-    height: 1.2rem;
-    background-image: url("data:image/svg+xml,%3Csvg width='18' height='16' viewBox='0 0 18 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_2)'%3E%3Cpath d='M17 5.5594C17.0027 6.75623 16.5285 7.90755 15.6768 8.77167C13.7239 10.7403 11.8295 12.7928 9.8047 14.6891C9.3399 15.1169 8.60309 15.1013 8.15908 14.6541L2.32302 8.77245C0.558995 6.99442 0.558995 4.12438 2.32302 2.34713C2.73993 1.92168 3.24138 1.58297 3.79694 1.35154C4.35251 1.12011 4.95064 1.00078 5.55505 1.00078C6.15947 1.00078 6.75759 1.12011 7.31316 1.35154C7.86873 1.58297 8.37017 1.92168 8.78709 2.34713L8.99989 2.56025L9.2119 2.34713C9.62966 1.92269 10.1312 1.5846 10.6866 1.35312C11.242 1.12164 11.8397 1.00153 12.4439 1C13.6599 1 14.8224 1.48534 15.676 2.34713C16.528 3.21113 17.0025 4.36247 17 5.5594Z' stroke='%236333FF' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_2'%3E%3Crect width='18' height='16' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-
-
-.similarity svg {
-    margin-right: 0px;
-}
-
-/* BARRE DE NAVIGATION EN POSITION FIXE */
-
-.navbar5 {
-    position:fixed;
-    left: 16px;
-    top: 506px;
-}
-
-.bar {
-    height: 46px;
-    width: 288px;
-    background-image: url("data:image/svg+xml,%3Csvg width='288' height='46' viewBox='0 0 288 46' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M143.5 33C158.688 33 171 20.6878 171 5.5C171 3.61644 170.811 1.7771 170.45 0H268C279.046 0 288 8.95431 288 20V26C288 37.0457 279.046 46 268 46H20C8.9543 46 0 37.0457 0 26V20C0 8.95431 8.95431 0 20 0H116.55C116.189 1.7771 116 3.61644 116 5.5C116 20.6878 128.312 33 143.5 33Z' fill='black'/%3E%3C/svg%3E ");  background-position: 50% 50%;
-    border-radius: 1rem;
-    display: grid;
-    grid-template-columns: 1.2fr .1fr 1.7fr .1fr 1.2fr
-}
-      
-.icons {
-    display: inline-block;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-      
-.circle {
-    position: absolute;
-    top: -17px;
-    left: 50%;
-    margin-left: -22px;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background: var(--main-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
